# swag-igvc-simulator

./: README.md
parameter_assertions/: package.xml
parameter_assertions/include/parameter_assertions/: assertions.h
parameter_assertions/src/: assertions.cpp
parameter_assertions/test/: CMakeLists.txt  test_complex_datatypes.cpp  test_complex_datatypes.test
pointcloud_to_laserscan/launch/: sample_node.launch  sample_nodelet.launch
swag_description/: CMakeLists.txt  README.md  package.xml
swag_description/launch/: display.launch  gazebo.launch  robot_state_publisher.launch  simulationTesting.launch  spawn_jessii.launch  spawn_swervi.launch
swag_description/urdf/: gazebo.material  jessii.urdf.xacro  swag.urdf  swerve_module.urdf.xacro  swervi.urdf  swervi.urdf.xacro
swag_description/urdf/meshes/: caster_wheel.STL  depth_camera.STL  gps.STL  left_wheel.STL  lidar.STL  realsense_camera.STL  realsense_camera_old.STL  right_wheel.STL
swag_description/urdf/worlds/: modified.world  own.world
swag_documentation/: Swag-IGVC Software stack guide.docx
swag_gazebo/: CMakeLists.txt  README.md  package.xml
swag_gazebo/config/: .~lock.client.csv#  .~lock.new.csv#  .~lock.waypoints_qual_0.csv#  new.csv
swag_gazebo/launch/: autonav.launch  autonav_low.launch  autonav_mesh.launch  qual_low.launch  qualification.launch  ramp_lane.launch  sim_detector.launch  simulation.launch  simulation_low.launch  swag_control.launch
swag_gazebo/nodes/control/: main.cpp
swag_msgs/: CMakeLists.txt  package.xml
swag_msgs/msg/: trajectory.msg
swag_navigation/: CMakeLists.txt  README.md  mainpage.dox  package.xml  setup.py
swag_navigation/config/: comman_params.yaml  ekf_localization_node_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml  rviz_config.rviz  teb_local_planner_params.yaml
swag_navigation/include/swag_utils/: NodeUtils.hpp  robot_control.h  robot_state.h
swag_navigation/launch/: differential_drive.launch  gridmap_viz.launch  localization.launch  mbf_navigation.launch  navigation_client.launch  navigation_server.launch  navigation_simulation.launch  set_waypoint_file_path.launch  state_estimator.launch  wheel_odometry.launch
swag_navigation/pso-slam/: CMakeLists.txt  README.md  package.xml
swag_navigation/pso-slam/CMakeModules/: ros-build.cmake  test-build.cmake
swag_navigation/pso-slam/include/: pso_slam.hpp
swag_navigation/pso-slam/include/pso_slam/: cell.h  config.h  core.h  frame.h  logger.h
swag_navigation/pso-slam/launch/: lidar_back.launch  lidar_front.launch  scan.launch
swag_navigation/pso-slam/lib/pso_slam/: cell.cpp  core.cpp  frame.cpp  logger.cpp
swag_navigation/pso-slam/src/: main.cpp  pso_slam.cpp
swag_navigation/pso-slam/src/test/: pso_slam_test.cpp
swag_navigation/src/back_up_recovery/: back_up_recovery.cpp
swag_navigation/src/differential_drive/: differential_drive.cpp  differential_drive.h
swag_navigation/src/mapper/: costmap_plugins.xml
swag_navigation/src/navigation_client/: navigation_client.cpp  navigation_client.h
swag_navigation/src/navigation_server/: navigation_server.cpp  navigation_server.h
swag_navigation/src/state_estimator/: CMakeLists.txt
swag_navigation/src/tests/: test_mapper.cpp
swag_navigation/src/tests/test/: test_mapper.test
swag_navigation/src/wheel_odometer/: Odometer.cpp  Odometer.h
swag_navigation/waypoints/: client.csv
swag_perception/: CMakeLists.txt  README.md  mainpage.dox  package.xml
swag_perception/config/: ground_filter.yaml
swag_perception/launch/: actual_barrel_segmentation.launch  elevation_map_height.launch  elevation_map_visualization.launch  elevation_mapping.launch  nn_viz.launch  pointcloud_filter.launch  ptseg.launch  slope_filter.launch  vision.launch
swag_perception/src/multiclass_segmentation/: README.md
swag_perception/src/pointcloud_filter/actual_barrel_segmentation/: actual_barrel_segmentation.cpp
swag_perception/src/pointcloud_segmentation/: README.md
swag_perception/src/train_eval/: README.md  igvc_unet.ipynb
