<?xml version="1.0"?>
<package format="2">
  <name>swag_gazebo</name>
  <version>1.0.0</version>
  <description>
    swag_control contains the files realting to the control of the robot in simulation
  </description>

  <maintainer email="jainurja24@gmail.com">Urja Jain</maintainer>
  <license>BSD</license>

  <author email="mishrapradumn2014@gmail.com">Pradumn Mishra</author>

  <depend>roscpp</depend>
  <depend>swag_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>tf</depend>
  <depend>geographiclib</depend>
  <depend>robot_localization</depend>

  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>laser_geometry</build_depend>
  <buildtool_depend>catkin</buildtool_depend>
  <!-- <build_depend>swag_utils</build_depend> -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>image_transport</build_depend>

  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_state_publisher</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>nodelet</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>velodyne_gazebo_plugins</exec_depend>
  <exec_depend>ros_control</exec_depend>
  <exec_depend>gazebo_ros_pkgs</exec_depend>
</package>
