<?xml version="1.0"?>
<package format="2">
  <name>swag_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages for Swayamchalit Gaadi</description>

  <maintainer email="jainurja24@gmail.com">Urja Jain</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.teamswag.in</url>
  <url type="website">https://github.com/Project-SwaG/swag-igvc-simulator</url>

  <author email="mishrapradumn2014@gmail.com">Pradumn Mishra</author>
  
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>

  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>actionlib_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- You can specify that this package is a metapackage here: -->
    <!-- <metapackage/> -->

    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
