<?xml version="1.0"?>
<package format="2">
  <name>swag_perception</name>
  <version>0.0.0</version>
  <description>Swayamchalit Gaadi perception stack</description>

  <maintainer email="jainurja24@gmail.com">Urja Jain</maintainer>

  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>MIT</license>


  <url type="website">http://www.teamswag.in</url>
  <url type="website">https://github.com/Project-SwaG/swag-igvc-simulator</url>  

  <author email="mishrapradumn2014@gmail.com">Pradumn Mishra</author>

  <!-- The *_depend tags are used to specify dependencies -->
  <!-- Dependencies can be catkin packages or system dependencies -->
  <!-- Examples: -->
  <!-- Use build_depend for packages you need at compile time: -->
  <!--   <build_depend>message_generation</build_depend> -->
  <!-- Use buildtool_depend for build tool packages: -->
  <!--   <buildtool_depend>catkin</buildtool_depend> -->
  <!-- Use run_depend for packages you need at runtime: -->
  <!--   <exec_depend>message_runtime</exec_depend> -->
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- Build dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>
  <depend>camera_info_manager</depend>
  <depend>std_msgs</depend>
  <depend>swag_msgs</depend>
  <depend>grid_map_core</depend>
  <depend>grid_map_ros</depend>
  <depend>grid_map_msgs</depend>

  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_geometry</build_depend>
  <build_depend>laser_geometry</build_depend>
  <!-- <build_depend>igvc_utils</build_depend> -->

  <!-- Run dependencies -->
  <exec_depend>image_transport</exec_depend>
  <exec_depend>cv_bridge</exec_depend>
  <exec_depend>pcl_conversions</exec_depend>
  <exec_depend>image_geometry</exec_depend>
  <exec_depend>geographiclib</exec_depend>
  <exec_depend>robot_localization</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>python-pytorch-pip</exec_depend>

  <!-- Builds from source -->
  <exec_depend>gps_common</exec_depend>

  <test_depend>rostest</test_depend>
</package>
